--- a/fe/sivishop/src/pages/users/theme/header/style.scss
+++ b/fe/sivishop/src/pages/users/theme/header/style.scss
@@ -1,3 +1,68 @@
+@use "sass:map";
+@import "style/pages/theme";
+
 .wrap-header {
   background: #f5f5f5;
+}
+
+.wrap-header-left {
+  ul {
+    display: flex;
+    align-items: center;
+    list-style: none;
+    column-gap: 20px;
+    padding: 10px 0 14px;
+
+    li {
+      font-size: 14px;
+      color: map.get($theme-color, "normal-text");
+      display: flex;
+      align-items: center;
+      column-gap: 2px;
+    }
+
+    li:first-child {
+      position: relative;
+
+      &:after {
+        position: absolute;
+        right: -10px;
+        top: 1px;
+        height: 20px;
+        width: 1px;
+        background: #000000;
+        opacity: 0.1;
+        content: "";
+      }
+    }
+  }
+}
+
+.wrap-header-right {
+  display: flex;
+  justify-content: end;
+  align-items: center;
+  padding: 10px 0 14px;
+
+  ul {
+    display: flex;
+    column-gap: 6px;
+    list-style: none;
+
+    a {
+      display: inline-block;
+      font-size: 14px;
+      color: map.get($theme-color, "normal-text");
+    }
+
+    li:last-child {
+      cursor: pointer;
+      margin-left: 10px;
+
+      span {
+        font-size: 14px;
+        margin-left: 2px;
+      }
+    }
+  }
 }
