--- a/fe/sivishop/src/style/pages/_all.scss
+++ b/fe/sivishop/src/style/pages/_all.scss
@@ -1,5 +1,6 @@
 @use "sass:map";
 @import "theme";
+@import "./responsive.scss";
 
 html,
 body {
@@ -20,12 +21,30 @@ body {
   margin: auto;
 }
 
-.row{
+.row {
   display: flex;
   flex-wrap: wrap;
 }
 
-.col-6{
+.col-6 {
   flex: 0 0 50%;
   max-width: 50%;
+}
+
+@include Responsive($DESKTOP) {
+  .col-xl-3 {
+    flex: 0 0 25%;
+    max-width: 25%;
+  }
+  .col-xl-6 {
+    flex: 0 0 50%;
+    max-width: 50%;
+  }
+}
+
+@include Responsive($MEDIUM_DEVICE) {
+  .col-lg-3 {
+    flex: 0 0 25%;
+    max-width: 25%;
+  }
 }
