--- a/fe/sivishop/src/pages/users/theme/header/style.scss
+++ b/fe/sivishop/src/pages/users/theme/header/style.scss
@@ -66,3 +66,75 @@
     }
   }
 }
+
+.header_logo {
+  padding: 15px 0;
+}
+
+.header_menu {
+  padding: 24px 0;
+
+  ul {
+    display: flex;
+    justify-content: space-between;
+
+    li {
+      list-style: none;
+
+      a{
+        text-decoration: none;
+        font-size: 12px;
+        color: map.get($theme-color, "bold-text");
+        text-transform: uppercase;
+        font-weight: bold;
+        letter-spacing: 2px;
+        transition: all 0.3s;
+        padding: 5px 0;
+        display: block;
+      }
+    }
+
+    .active a {
+      color: map.get($theme-color, "main");
+    }
+  }
+}
+
+.header_cart {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 20px 0;
+
+  ul {
+    display: flex;
+    margin-right: 25px;
+
+    li {
+      list-style: none;
+      margin-left: 20px;
+      position: relative;
+
+      svg {
+        font-size: 25px;
+        color: map.get($theme-color, "normal-text");
+      }
+
+      span {
+        color: white;
+        background-color: map.get($theme-color, "main");
+        position: absolute;
+        width: 20px;
+        height: 20px;
+        border-radius: 50%;
+        font-size: 12px;
+        display: inline-block;
+        text-align: center;
+        line-height: 20px;
+        font-weight: 500;
+        left: 20px;
+        top: -2px;
+      }
+    }
+  }
+}
