--- a/fe/sivishop/src/pages/users/theme/header/style.scss
+++ b/fe/sivishop/src/pages/users/theme/header/style.scss
@@ -80,8 +80,9 @@
 
     li {
       list-style: none;
+      position: relative;
 
-      a{
+      a {
         text-decoration: none;
         font-size: 12px;
         color: map.get($theme-color, "bold-text");
@@ -94,8 +95,38 @@
       }
     }
 
+    li:hover .menu_dropdown {
+      opacity: 1;
+      visibility: visible;
+    }
+
     .active a {
       color: map.get($theme-color, "main");
+    }
+
+    .menu_dropdown {
+      position: absolute;
+      background-color: #222222;
+      display: block;
+      width: 180px;
+      z-index: 9;
+      padding: 5px 0;
+      transition: all 0.3s;
+      opacity: 0;
+      visibility: hidden;
+
+      li {
+        a {
+          text-transform: capitalize;
+          color: #ffffff;
+          font-weight: 400;
+          padding: 5px 15px;
+        }
+
+        :hover {
+          color: map.get($theme-color, "main");
+        }
+      }
     }
   }
 }
