--- a/fe/sivishop/src/pages/users/theme/header/style.scss
+++ b/fe/sivishop/src/pages/users/theme/header/style.scss
@@ -1,6 +1,8 @@
 @use "sass:map";
 @import "style/pages/theme";
 
+$bannerImg: "/assets/users/images/hero/banner.jpg";
+
 .wrap-header {
   background: #f5f5f5;
 }
@@ -165,6 +167,189 @@
         font-weight: 500;
         left: 20px;
         top: -2px;
+      }
+    }
+  }
+}
+
+.hero_categories {
+  position: relative;
+  .hero_categories_all {
+    background-color: map.get($theme-color, "main");
+    padding: 15px 25px 15px 40px;
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+    color: #ffffff;
+    font-weight: 700;
+
+    svg,
+    span {
+      font-size: 16px;
+      margin-right: 5px;
+    }
+
+    svg {
+      font-size: 20px;
+      font-weight: bold;
+    }
+  }
+
+  ul {
+    position: absolute;
+    opacity: 1;
+    border: 1px solid #ededed;
+    width: 99%;
+    background: #ffffff;
+    transition: all 0.3s;
+
+    li {
+      list-style: none;
+
+      a {
+        text-decoration: none;
+        background-color: transparent;
+        font-size: 16px;
+        color: map.get($theme-color, "normal-text");
+        line-height: 39px;
+        display: block;
+        padding-left: 40px;
+      }
+
+      &:hover {
+        background-color: #ffffff;
+
+        a {
+          color: map.get($theme-color, "main");
+        }
+      }
+    }
+    &.hiden {
+      opacity: 0;
+    }
+  }
+}
+
+.hero-search-container {
+  .hero-search-form {
+    padding-left: 15px;
+    width: 610px;
+    height: 50px;
+    float: left;
+    margin-bottom: 30px;
+
+    form {
+      display: flex;
+      align-items: center;
+    }
+    input {
+      border: none;
+      height: 48px;
+      font-size: 16px;
+      color: #b2b2b2;
+      padding-left: 20px;
+      border: 1px solid #ebebeb;
+      width: 70%;
+
+      :focus {
+        outline: none;
+        border: none;
+      }
+    }
+
+    button {
+      font-size: 14px;
+      color: #ffffff;
+      font-weight: 800;
+      text-transform: uppercase;
+      display: inline-block;
+      padding: 16px 30px 17px;
+      background: map.get($theme-color, "main");
+      border: none;
+      height: 100%;
+    }
+  }
+
+  .hero-search-phone {
+    display: flex;
+    align-items: center;
+
+    .hero-search-phone-icon {
+      font-size: 25px;
+      padding: 10px;
+      background: #f5f5f5;
+      line-height: 50px;
+      text-align: center;
+      border-radius: 50%;
+      float: left;
+      margin-right: 20px;
+      display: flex;
+      justify-content: start;
+      align-items: center;
+      color: map.get($theme-color, "main");
+    }
+
+    .hero-search-phone-text {
+      display: inline-block;
+
+      p {
+        color: map.get($theme-color, "normal-text");
+        font-weight: bold;
+        margin-bottom: 5px;
+      }
+
+      span {
+        color: #6f6f6f;
+        font-style: 14px;
+      }
+    }
+  }
+
+  .hero-item {
+    background-image: url($bannerImg);
+    background-size: cover;
+    height: 410px;
+    display: flex;
+    align-items: center;
+    width: 100%;
+    margin-left: 15px;
+
+    .hero-text {
+      padding-left: 75px;
+
+      span {
+        font-size: 14px;
+        font-weight: 700;
+        text-transform: uppercase;
+        letter-spacing: 4px;
+        color: map.get($theme-color, "main");
+      }
+
+      h2 {
+        font-size: 45px;
+        font-weight: 700;
+        text-transform: uppercase;
+        line-height: 52px;
+        color: map.get($theme-color, "bold-text");
+        margin: 10px 0;
+      }
+      p {
+        font-size: 16px;
+        color: #6f6f6f;
+        font-weight: 400;
+        line-height: 26px;
+        margin-bottom: 15px;
+      }
+      a {
+        display: inline-block;
+        font-size: 14px;
+        padding: 10px 28px 10px;
+        color: #ffffff;
+        text-transform: uppercase;
+        font-weight: 700;
+        background: map.get($theme-color, "main");
+        letter-spacing: 2px;
+        text-decoration: none;
       }
     }
   }
